fix popup form overflow

--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,17 @@ text.logo
   align-items: flex-start;
 }
 
+.oogo-form .checkbox-column {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+
+.oogo-form .checkbox-column div {
+  width: 50%;
+  text-align: left;
+}
+
 .oogo-form input[type="checkbox"] {
   display: none;
 }
